# deployvault_cli

./: .gitignore  README.md  TODO.txt  pyproject.toml  requirements.txt
deployvault_test/: pyvenv.cfg
deployvault_test/Scripts/: activate  activate.bat
src/deployvault_cli/: account_config.py  auth.py  cli.py  package_installer.py  parser.py  proxy_server.py
src/deployvault_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/your_package_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
