[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployvault_cli"
version = "0.1.0"
description = "A tool to install packages from a private PyPI repository"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
]

[project.scripts]
deployvault_cli = "deployvault_cli.cli:main"